name:           repro
version:        0.1.0.0
synopsis:       repro
build-type:     Simple

executable repro
  main-is: Main.hs
  other-modules: Repro2
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , async >= 2.2.2
    , directory
    , filepath
    , random
    --, time
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
