name:           repro
version:        0.1.0.0
synopsis:       repro
build-type:     Simple

executable repro
  main-is: Main.hs
  other-modules: Repro2
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
    , directory
    , filepath
    --, time
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable blocking
  main-is: Blocking.hs
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable openBlocking
  main-is: OpenBlocking.hs
  hs-source-dirs:
      .
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
